--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ img {
   float: left;
 }
 
-#date {
+#theDate {
   font: Verdana;
   font-size: 20px;
   width: 30%;
@@ -55,7 +55,7 @@ img {
   display: inline;
 }
 
-#subject {
+#theSubject {
   font: Verdana;
   font-size: 20px;
   width: 40%;
@@ -63,7 +63,7 @@ img {
   display: inline;
 }
 
-#sender {
+#theSender {
   font: Verdana;
   font-size: 20px;
   width: 30%;
