--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,31 @@
-div#gee-mail-area ul li.email span.sender {
-	font-family: Arial;
-	font-size: 14px;
-	/*float: left;*/
-	width: 30%;
-}
-
-div#gee-mail-area ul li.email span.subject {
-	font-family: Arial;
-	font-size: 14px;
-	/*float: left;*/
-	width: 30%;
-}
-
-div#gee-mail-area ul li.email span.date {
-	font-family: Arial;
-	font-size: 14px;
-	/*float: right;*/
-	width: 30%;
-}
-
-span {
+span{
 	display: inline-block;
 	width: 30%;
+	padding: 10px 20px;
+	}
+
+p{
+
+	padding: 5px 20px;
 }
 
-li {
-	list-style-type: none;
+li{
+
+	list-style-type: none;	
+}
+
+img{
+	position: relative;
+	margin-left: 565px;
+}
+
+h5{
+	text-align: center;
+	font-size: 20px;
+}
+
+.header-style {
+	font-size: 20px;
+	font-style: bold underline;
+
 }
