--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,15 @@ img {
   float: left;
 }
 
+#dialog {
+    background-color:#fff;
+    display:none;
+    width:350px;
+    padding:15px;
+    text-align:left;
+    border:2px solid #333;
+  }
+
 #dates {
   font: Verdana;
   font-size: 20px;
