--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-  font-size: 80;
+  font-size: 80px;
   font-family: Arial;
   color: white;
   text-align: center;
@@ -16,12 +16,19 @@ img {
   height: 60px;
 }
 
+#stop_messages {
+  float: right;
+  width: 100px;
+  height: 35px;
+
+}
 
 #inbox {
   font: Verdana;
-  font-size: 20px;
+  font-size: 30px;
   width: 10%;
   float: left;
+  border: 2px;
 }
 
 #inboxCounter {
@@ -29,6 +36,7 @@ img {
   font-size: 20px;
   width: 30%;
   float: left;
+  margin-top: -30px;
 }
 
 
@@ -69,14 +77,18 @@ img {
   float: left;
 }
 
-#dialog {
-    background-color:#fff;
-    display:none;
-    width:350px;
-    padding:15px;
-    text-align:left;
-    border:2px solid #333;
-  }
+#emailList {
+  list-style-type: none;
+}
+
+#emailList, li {
+  margin-bottom: 15px;
+  margin-left: -20px;
+}
+
+.message_body {
+  margin: 10px 0px 30px 0px;
+}
 
 #dates {
   font: Verdana;
