--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     font-weight: bold;
     background-color: blue;
     width: 100%;
-    margin-top: 20px;
+    margin-bottom: 10px;
 
   }
 
@@ -18,19 +18,12 @@
   img {
     width: 130px;
     height: 60px;
+    margin-bottom: inherit;
   }
 
   #plus {
     color: yellow;
   }
-
-  /*#stop_messages {
-    float: right;
-    width: 180px;
-    height: 65px;
-    font-size: 15px;
-    text-align: center;
-  }*/
 
   .stopLoadingMessages {
     background-color: red;
