--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,11 @@
     float: left;
   }
 
+  .deleteButton {
+    margin-bottom: 0px;
+    padding: 0px; 
+  }
+
   #emailList {
     list-style-type: none;
   }
@@ -108,7 +113,7 @@
   }
 
   #emailList li {
-    margin-bottom: 15px;
+    margin-top: 5px;
     max-width: initial;
   }
 
