--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,47 @@
 body {
-	text-transform: uppercase;
+	font-family: Helvetica;
 }
 
 span {
+	font-family: Helvetica;
 	display: inline-block;
 	width: 30%;
 	padding: 10px 20px;
 	}
 
 p { 
+	font-family: Helvetica;
 	padding: 5px 20px;
 }
 
 li {
-	list-style-type: none;	
+	list-style-type: none;
+	font-family: Helvetica;	
 }
 
 img {
 	position: relative;
-	margin-left: 565px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h2{
+	font-family: Helvetica;
+	font-size: 36px;
+	font-weight: bold;
 }
 
 h5 {
+	font-family: 'UnifrakturMaguntia', cursive;
 	text-align: center;
-	font-size: 20px;
+	font-size: 32px;
+	padding-bottom: 20px;
+}
+
+h1 {
+	font-family: Helvetica;
+	font-size: 24px;
 }
 
 .header-style {
