--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,292 @@
   }
 
 }
+
+/* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { 
+
+.container {
+    font-size: 80px;
+    font-family: Arial;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    background-color: blue;
+    width: 100%;
+    margin-bottom: 10px;
+
+  }
+
+
+  img {
+    width: 130px;
+    height: 60px;
+    margin-bottom: inherit;
+  }
+
+  #plus {
+    color: yellow;
+  }
+
+  .stopLoadingMessages {
+    background-color: red;
+  }
+
+  #stop_messages {
+    margin-right: -347px;
+  }
+
+  .button {
+    float: right;
+  }
+
+  #inbox {
+    font: Verdana;
+    font-size: 30px;
+    width: 10%;
+    float: left;
+  }
+
+  #inboxCounter {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+    margin-top: 18px;
+  }
+
+  #messageCounter {
+    margin-left: 40px;
+    margin-top: 18px;
+    font-size: 20px;
+
+  }
+
+  .second_row {
+    background-color: blue;
+    width: 100%;
+    float: left;
+  }
+
+  .second_row {
+    font-size: 20px;
+  }
+
+  #theDate {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 30px;
+    margin-right: 0px;
+  }
+
+  #theSubject {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 20px;
+    margin-right: 0px;
+  }
+
+  #theSender {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 25px;
+    margin-right: 0px;
+  }
+
+  .third_row {
+    width: 100%;
+    float: left;
+  }
+
+  .deleteButton {
+    margin-bottom: 0px;
+    padding: 0px; 
+  }
+
+  #emailList {
+    list-style-type: none;
+  }
+
+  #emailList, li {
+    /*margin-left: -18px;*/
+  }
+
+  #emailList li {
+    margin-top: 5px;
+    max-width: initial;
+  }
+
+  li:hover, li:active {
+    font-size: 115%;
+    color: blue;
+  }
+
+  .message_body {
+    margin: 10px 0px 30px 0px;
+  }
+
+  #dates {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+  }
+
+  #subjects {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+
+  }
+
+  #senders {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+  }
+}
+
+/* max-width 640px, mobile-only styles, use when QAing mobile issues */
+@media only screen and (max-width: 40em) { 
+  
+.container {
+    font-size: 80px;
+    font-family: Arial;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    background-color: blue;
+    width: 100%;
+    margin-bottom: 10px;
+
+  }
+
+
+  img {
+    width: 130px;
+    height: 60px;
+    margin-bottom: inherit;
+  }
+
+  #plus {
+    color: yellow;
+  }
+
+  .stopLoadingMessages {
+    background-color: red;
+  }
+
+  #stop_messages {
+    margin-right: -347px;
+  }
+
+  .button {
+    float: right;
+  }
+
+  #inbox {
+    font: Verdana;
+    font-size: 30px;
+    width: 10%;
+    float: left;
+  }
+
+  #inboxCounter {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+    margin-top: 18px;
+  }
+
+  #messageCounter {
+    margin-left: 40px;
+    margin-top: 18px;
+    font-size: 20px;
+
+  }
+
+  .second_row {
+    background-color: blue;
+    width: 100%;
+    float: left;
+    font-size: 20px;
+  }
+
+  /*#theDate {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 30px;
+    margin-right: 0px;
+  }
+
+  #theSubject {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 20px;
+    margin-right: 0px;
+  }
+
+  #theSender {
+    font: Verdana;
+    font-size: 20px;
+    padding-left: 25px;
+    margin-right: 0px;
+  }*/
+
+  .third_row {
+    width: 100%;
+    float: left;
+  }
+
+  .deleteButton {
+    margin-bottom: 0px;
+    padding: 0px; 
+  }
+
+  #emailList {
+    list-style-type: none;
+  }
+
+  #emailList, li {
+    /*margin-left: -18px;*/
+  }
+
+  #emailList li {
+    margin-top: 5px;
+    max-width: initial;
+  }
+
+  li:hover, li:active {
+    font-size: 115%;
+    color: blue;
+  }
+
+  .message_body {
+    margin: 10px 0px 30px 0px;
+  }
+
+  #dates {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+  }
+
+  #subjects {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+
+  }
+
+  #senders {
+    font: Verdana;
+    font-size: 20px;
+    width: 30%;
+    float: left;
+  }
+} 
